@@ -7,6 +7,7 @@ Version 0.11
  Sim: Simplify output mechanism
  Sim: Use /dev/ptmx if posix_openpt isn't available
  Sim: Optionally attach a screen session
+ Sim: Add "Cycle" generator
 
 Version 0.10 (released 2009-10-31)
  Logger, conf: Ability to adjust serial baudrate
